--- a/Documentation/latex/annotated.tex
+++ b/Documentation/latex/annotated.tex
@@ -5,4 +5,5 @@ Here are the classes, structs, unions and interfaces with brief descriptions\-:\
 \item\contentsline{section}{\hyperlink{classInputFieldNames}{Input\-Field\-Names} }{\pageref{classInputFieldNames}}{}
 \item\contentsline{section}{\hyperlink{classPageLayout}{Page\-Layout} }{\pageref{classPageLayout}}{}
 \item\contentsline{section}{\hyperlink{classReadInputFields}{Read\-Input\-Fields} }{\pageref{classReadInputFields}}{}
+\item\contentsline{section}{\hyperlink{classRollNoDetails}{Roll\-No\-Details} }{\pageref{classRollNoDetails}}{}
 \end{DoxyCompactList}
