--- a/Documentation/latex/classInputFieldNames.tex
+++ b/Documentation/latex/classInputFieldNames.tex
@@ -12,7 +12,7 @@
 \item 
 void \hyperlink{classInputFieldNames_a7f9413e1474a83378a2e29f0ceee4311}{Set\-Field\-Names} ()
 \end{DoxyCompactItemize}
-\subsection*{Protected Attributes}
+\subsection*{Public Attributes}
 \begin{DoxyCompactItemize}
 \item 
 string \hyperlink{classInputFieldNames_a171ac43b7f0c5b5ab9fad8f3417dfb5c}{class\-Name}
@@ -27,6 +27,17 @@ string \hyperlink{classInputFieldNames_a171ac43b7f0c5b5ab9fad8f3417dfb5c}{class\
 
 \item 
 \hypertarget{classInputFieldNames_a4d589fac2a65e2ebbdf5fed5a38929b1}{string {\bfseries subject\-Name}}\label{classInputFieldNames_a4d589fac2a65e2ebbdf5fed5a38929b1}
+
+\item 
+string \hyperlink{classInputFieldNames_a6b73b0278aac9c72ce168717674261c7}{prefix}
+\begin{DoxyCompactList}\small\item\em Roll No details fields. \end{DoxyCompactList}\item 
+\hypertarget{classInputFieldNames_a55492c5cc6af276ae73e3e4e3e2f0434}{string {\bfseries start\-Roll\-No}}\label{classInputFieldNames_a55492c5cc6af276ae73e3e4e3e2f0434}
+
+\item 
+\hypertarget{classInputFieldNames_a78cb711d50ce1ab6e97beb37f9069485}{string {\bfseries end\-Roll\-No}}\label{classInputFieldNames_a78cb711d50ce1ab6e97beb37f9069485}
+
+\item 
+\hypertarget{classInputFieldNames_a3f2d3c779501727ba335d88f5edf2060}{string {\bfseries not\-Included}}\label{classInputFieldNames_a3f2d3c779501727ba335d88f5edf2060}
 
 \end{DoxyCompactItemize}
 
@@ -85,14 +96,25 @@ Definition at line 52 of file inputfieldnames.\-cc.
 \subsection{Member Data Documentation}
 \hypertarget{classInputFieldNames_a171ac43b7f0c5b5ab9fad8f3417dfb5c}{\index{Input\-Field\-Names@{Input\-Field\-Names}!class\-Name@{class\-Name}}
 \index{class\-Name@{class\-Name}!InputFieldNames@{Input\-Field\-Names}}
-\subsubsection[{class\-Name}]{\setlength{\rightskip}{0pt plus 5cm}string Input\-Field\-Names\-::class\-Name\hspace{0.3cm}{\ttfamily [protected]}}}\label{classInputFieldNames_a171ac43b7f0c5b5ab9fad8f3417dfb5c}
+\subsubsection[{class\-Name}]{\setlength{\rightskip}{0pt plus 5cm}string Input\-Field\-Names\-::class\-Name}}\label{classInputFieldNames_a171ac43b7f0c5b5ab9fad8f3417dfb5c}
 
 
 Field Names. 
 
 Class Details Value /$\ast$ Field Name $\ast$/ 
 
-Definition at line 40 of file inputfieldnames.\-h.
+Definition at line 41 of file inputfieldnames.\-h.
+
+\hypertarget{classInputFieldNames_a6b73b0278aac9c72ce168717674261c7}{\index{Input\-Field\-Names@{Input\-Field\-Names}!prefix@{prefix}}
+\index{prefix@{prefix}!InputFieldNames@{Input\-Field\-Names}}
+\subsubsection[{prefix}]{\setlength{\rightskip}{0pt plus 5cm}string Input\-Field\-Names\-::prefix}}\label{classInputFieldNames_a6b73b0278aac9c72ce168717674261c7}
+
+
+Roll No details fields. 
+
+
+
+Definition at line 41 of file inputfieldnames.\-h.
 
 
 
