--- a/Documentation/latex/hierarchy.tex
+++ b/Documentation/latex/hierarchy.tex
@@ -5,6 +5,7 @@ This inheritance list is sorted roughly, but not completely, alphabetically\-:\b
 \item \contentsline{section}{Page\-Layout}{\pageref{classPageLayout}}{}
 \begin{DoxyCompactList}
 \item \contentsline{section}{Class\-Details}{\pageref{classClassDetails}}{}
+\item \contentsline{section}{Roll\-No\-Details}{\pageref{classRollNoDetails}}{}
 \end{DoxyCompactList}
 \end{DoxyCompactList}
 \item \contentsline{section}{Input\-Field\-Names}{\pageref{classInputFieldNames}}{}
