--- a/Documentation/latex/classRollNoDetails.tex
+++ b/Documentation/latex/classRollNoDetails.tex
@@ -1,29 +1,30 @@
-\hypertarget{classClassDetails}{\section{Class\-Details Class Reference}
-\label{classClassDetails}\index{Class\-Details@{Class\-Details}}
+\hypertarget{classRollNoDetails}{\section{Roll\-No\-Details Class Reference}
+\label{classRollNoDetails}\index{Roll\-No\-Details@{Roll\-No\-Details}}
 }
 
 
-{\ttfamily \#include $<$classdetails.\-h$>$}
+{\ttfamily \#include $<$rollnodetails.\-h$>$}
 
-Inheritance diagram for Class\-Details\-:\begin{figure}[H]
+Inheritance diagram for Roll\-No\-Details\-:\begin{figure}[H]
 \begin{center}
 \leavevmode
-\includegraphics[height=3.000000cm]{classClassDetails}
+\includegraphics[height=3.000000cm]{classRollNoDetails}
 \end{center}
 \end{figure}
 \subsection*{Public Member Functions}
 \begin{DoxyCompactItemize}
 \item 
-\hyperlink{classClassDetails_af8fb7a92c63d62a03a60c47476f4523a}{Class\-Details} ()
+\hyperlink{classRollNoDetails_aef927fa87d8ab659f6a241290936980c}{Roll\-No\-Details} ()
 \begin{DoxyCompactList}\small\item\em Constructor. \end{DoxyCompactList}\item 
-void \hyperlink{classClassDetails_a2a63d68979d3ac96d35e6534414799ef}{Total\-Classes} ()
-\begin{DoxyCompactList}\small\item\em Get total classes. \end{DoxyCompactList}\item 
-void \hyperlink{classClassDetails_a7eed324cd736c68fe4b420de481e3b17}{Class\-Info} ()
+\hyperlink{classRollNoDetails_a218c683c86ee19788b868a08af6e210f}{Read\-Class\-Details} ()
+\begin{DoxyCompactList}\small\item\em Reading class details from previous page using cgicc. \end{DoxyCompactList}\item 
+\hypertarget{classRollNoDetails_ade931d9c426fbd3fd5d8db72b3a55289}{{\bfseries Write\-Class\-Details} ()}\label{classRollNoDetails_ade931d9c426fbd3fd5d8db72b3a55289}
+
 \item 
-void \hyperlink{classClassDetails_a4a0b14f8c5ca7f845d64854a0d81e1ec}{Header} ()
-\begin{DoxyCompactList}\small\item\em Header of page. \end{DoxyCompactList}\item 
-void \hyperlink{classClassDetails_a8e80a53e9b6597171c6d8b1976dc33f9}{Footer} ()
-\begin{DoxyCompactList}\small\item\em Footer of page. \end{DoxyCompactList}\item 
+void \hyperlink{classPageLayout_a7726061f0653245f644a05807fa92472}{Header} ()
+\item 
+void \hyperlink{classPageLayout_a68aa868a8868b12964f161838b5f814c}{Footer} ()
+\item 
 void \hyperlink{classPageLayout_a49af1dca286bbee9432192a7b3c00332}{Menu} ()
 \item 
 void \hyperlink{classPageLayout_ae60235c6af48e3ebbc6343d02456da0c}{Logo} (string logo\-Name)
@@ -77,36 +78,27 @@ void \hyperlink{classHTMLTags_ab6dbb027d808e7b708a4ece7e911ceee}{Button} (string
 \subsection*{Protected Attributes}
 \begin{DoxyCompactItemize}
 \item 
-\hypertarget{classClassDetails_a9bea81a0e09229c7060a592af6321b26}{int {\bfseries total\-Classes}}\label{classClassDetails_a9bea81a0e09229c7060a592af6321b26}
+string \hyperlink{classRollNoDetails_a2126e353865b8e215513fe17785ef230}{prefix} \mbox{[}M\-I\-N\-\_\-\-S\-I\-Z\-E\mbox{]}
+\begin{DoxyCompactList}\small\item\em for storing values of class details \end{DoxyCompactList}\item 
+\hypertarget{classRollNoDetails_a441e0e8f352b04e2eb104d8a69d939c2}{string {\bfseries start\-Roll\-No} \mbox{[}M\-I\-N\-\_\-\-S\-I\-Z\-E\mbox{]}}\label{classRollNoDetails_a441e0e8f352b04e2eb104d8a69d939c2}
 
 \item 
-string {\bfseries class\-Name} \mbox{[}max\-Classes\mbox{]}
-\item 
-string {\bfseries subject\-Name} \mbox{[}max\-Classes\mbox{]}
-\item 
-string {\bfseries subject\-Code} \mbox{[}max\-Classes\mbox{]}
-\item 
-string {\bfseries table\-Heading} \mbox{[}4\mbox{]}
-\item 
-\hypertarget{classClassDetails_a53e447a55d35c02dcb02c6553380697e}{\hyperlink{classInputFieldNames}{Input\-Field\-Names} {\bfseries field\-Name}}\label{classClassDetails_a53e447a55d35c02dcb02c6553380697e}
+\hypertarget{classRollNoDetails_a8231b6d71b73f825f29a84e290d6736b}{string {\bfseries end\-Roll\-No} \mbox{[}M\-I\-N\-\_\-\-S\-I\-Z\-E\mbox{]}}\label{classRollNoDetails_a8231b6d71b73f825f29a84e290d6736b}
 
 \item 
-\hypertarget{classClassDetails_a76dd2ba9e99ef8c24083a4b770003b07}{\hyperlink{classReadInputFields}{Read\-Input\-Fields} {\bfseries read\-Field}}\label{classClassDetails_a76dd2ba9e99ef8c24083a4b770003b07}
+\hypertarget{classRollNoDetails_a1280f14b2160fb396a675bc4ba5fb85d}{string {\bfseries not\-Included} \mbox{[}M\-I\-N\-\_\-\-S\-I\-Z\-E\mbox{]}}\label{classRollNoDetails_a1280f14b2160fb396a675bc4ba5fb85d}
 
 \item 
-\hypertarget{classClassDetails_ab9f71f35c7f01ccbc4bfcd7e9f5ba28b}{int {\bfseries i}}\label{classClassDetails_ab9f71f35c7f01ccbc4bfcd7e9f5ba28b}
+\hypertarget{classRollNoDetails_aa2d166949084d8f3ba6d8ab70f49282a}{int {\bfseries total\-Classes}}\label{classRollNoDetails_aa2d166949084d8f3ba6d8ab70f49282a}
 
 \item 
-\hypertarget{classClassDetails_a57e44148f58db012a1cea587a09e2a4c}{int {\bfseries j}}\label{classClassDetails_a57e44148f58db012a1cea587a09e2a4c}
+\hypertarget{classRollNoDetails_a269aeef5b1c437d9f6013d5a76c26186}{\hyperlink{classInputFieldNames}{Input\-Field\-Names} {\bfseries field\-Name}}\label{classRollNoDetails_a269aeef5b1c437d9f6013d5a76c26186}
 
 \item 
-\hypertarget{classClassDetails_a1f87d306010f98019f49d965e15e8104}{int {\bfseries k}}\label{classClassDetails_a1f87d306010f98019f49d965e15e8104}
+\hypertarget{classRollNoDetails_aa91e1fe3aea1075074eced641c761615}{\hyperlink{classReadInputFields}{Read\-Input\-Fields} {\bfseries read\-Field}}\label{classRollNoDetails_aa91e1fe3aea1075074eced641c761615}
 
 \item 
-\hypertarget{classClassDetails_a0d3938ba9270a39f0579bd8fbe0cae0b}{stringstream {\bfseries ss}}\label{classClassDetails_a0d3938ba9270a39f0579bd8fbe0cae0b}
-
-\item 
-\hypertarget{classClassDetails_ade1a7d32883434c1a994c7c04a275d3d}{string {\bfseries temp}}\label{classClassDetails_ade1a7d32883434c1a994c7c04a275d3d}
+\hypertarget{classRollNoDetails_a0c858cf00fffdea8380f1a69d95d325f}{ofstream {\bfseries out\-File}}\label{classRollNoDetails_a0c858cf00fffdea8380f1a69d95d325f}
 
 \item 
 string \hyperlink{classPageLayout_a8a3c1ddc422df2556fbc95d0cd575a05}{project\-Name}
@@ -156,41 +148,47 @@ string \hyperlink{classHTMLTags_ae987289d0dab2e3e234048615f930d0f}{start\-H1}
 
 
 \subsection{Detailed Description}
-=================================================================== Class\-: \hyperlink{classClassDetails}{Class\-Details} Description\-: This class is used to get details of class from \subsection*{user. Like class name, total classes, subject details etc.}
 
-Definition at line 43 of file classdetails.\-h.
+
+ \subsubsection*{Include required header files}
+
+
+
+ Class\-: \hyperlink{classRollNoDetails}{Roll\-No\-Details} \subsection*{Description\-: \hyperlink{classRollNoDetails}{Roll\-No\-Details} class for }
+
+Definition at line 35 of file rollnodetails.\-h.
 
 
 
 \subsection{Constructor \& Destructor Documentation}
-\hypertarget{classClassDetails_af8fb7a92c63d62a03a60c47476f4523a}{\index{Class\-Details@{Class\-Details}!Class\-Details@{Class\-Details}}
-\index{Class\-Details@{Class\-Details}!ClassDetails@{Class\-Details}}
-\subsubsection[{Class\-Details}]{\setlength{\rightskip}{0pt plus 5cm}Class\-Details\-::\-Class\-Details (
+\hypertarget{classRollNoDetails_aef927fa87d8ab659f6a241290936980c}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Roll\-No\-Details@{Roll\-No\-Details}}
+\index{Roll\-No\-Details@{Roll\-No\-Details}!RollNoDetails@{Roll\-No\-Details}}
+\subsubsection[{Roll\-No\-Details}]{\setlength{\rightskip}{0pt plus 5cm}Roll\-No\-Details\-::\-Roll\-No\-Details (
 \begin{DoxyParamCaption}
 {}
 \end{DoxyParamCaption}
-)}}\label{classClassDetails_af8fb7a92c63d62a03a60c47476f4523a}
+)}}\label{classRollNoDetails_aef927fa87d8ab659f6a241290936980c}
 
 
 Constructor. 
 
 
 
- \subsubsection*{Incude header file which has \hyperlink{classClassDetails}{Class\-Details}'s declaration}
+ \subsubsection*{Include \hyperlink{rollnodetails_8h_source}{rollnodetails.\-h} for \hyperlink{classRollNoDetails}{Roll\-No\-Details} class declaration}
 
-\subsubsection*{Defnition of member functions}
+\subsubsection*{Definition of functions \hyperlink{classRollNoDetails}{Roll\-No\-Details} Class}
 
 
 
- Class\-: \hyperlink{classClassDetails}{Class\-Details} Method\-: \hyperlink{classClassDetails}{Class\-Details} \-:\-: \hyperlink{classClassDetails_af8fb7a92c63d62a03a60c47476f4523a}{Class\-Details()} \subsubsection*{Description\-: Constructor}
+ Class\-: \hyperlink{classRollNoDetails}{Roll\-No\-Details} Method\-: \hyperlink{classRollNoDetails}{Roll\-No\-Details} \-:\-: \hyperlink{classRollNoDetails_aef927fa87d8ab659f6a241290936980c}{Roll\-No\-Details()} \subsubsection*{Description\-: Constructor}
 
-Definition at line 37 of file classdetails.\-cc.
+Definition at line 37 of file rollnodetails.\-cc.
 
 
 
 \subsection{Member Function Documentation}
-\hypertarget{classHTMLTags_a7cae36bd3a0e6f35e89494e5cda64971}{\index{Class\-Details@{Class\-Details}!Body\-End@{Body\-End}}
-\index{Body\-End@{Body\-End}!ClassDetails@{Class\-Details}}
+\hypertarget{classHTMLTags_a7cae36bd3a0e6f35e89494e5cda64971}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Body\-End@{Body\-End}}
+\index{Body\-End@{Body\-End}!RollNoDetails@{Roll\-No\-Details}}
 \subsubsection[{Body\-End}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Body\-End (
 \begin{DoxyParamCaption}
 {}
@@ -206,8 +204,8 @@ Display $<$/\-B\-O\-D\-Y$>$
 
 Definition at line 180 of file htmltags.\-cc.
 
-\hypertarget{classHTMLTags_af1fb7b90b9ebb83177da18aba1ef86a9}{\index{Class\-Details@{Class\-Details}!Body\-Start@{Body\-Start}}
-\index{Body\-Start@{Body\-Start}!ClassDetails@{Class\-Details}}
+\hypertarget{classHTMLTags_af1fb7b90b9ebb83177da18aba1ef86a9}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Body\-Start@{Body\-Start}}
+\index{Body\-Start@{Body\-Start}!RollNoDetails@{Roll\-No\-Details}}
 \subsubsection[{Body\-Start}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Body\-Start (
 \begin{DoxyParamCaption}
 {}
@@ -223,8 +221,8 @@ Display $<$\-B\-O\-D\-Y$>$
 
 Definition at line 166 of file htmltags.\-cc.
 
-\hypertarget{classHTMLTags_ab6dbb027d808e7b708a4ece7e911ceee}{\index{Class\-Details@{Class\-Details}!Button@{Button}}
-\index{Button@{Button}!ClassDetails@{Class\-Details}}
+\hypertarget{classHTMLTags_ab6dbb027d808e7b708a4ece7e911ceee}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Button@{Button}}
+\index{Button@{Button}!RollNoDetails@{Roll\-No\-Details}}
 \subsubsection[{Button}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Button (
 \begin{DoxyParamCaption}
 \item[{string}]{id, }
@@ -243,23 +241,8 @@ Button.
 
 Definition at line 353 of file htmltags.\-cc.
 
-\hypertarget{classClassDetails_a7eed324cd736c68fe4b420de481e3b17}{\index{Class\-Details@{Class\-Details}!Class\-Info@{Class\-Info}}
-\index{Class\-Info@{Class\-Info}!ClassDetails@{Class\-Details}}
-\subsubsection[{Class\-Info}]{\setlength{\rightskip}{0pt plus 5cm}void Class\-Details\-::\-Class\-Info (
-\begin{DoxyParamCaption}
-{}
-\end{DoxyParamCaption}
-)}}\label{classClassDetails_a7eed324cd736c68fe4b420de481e3b17}
-Get class details like class name, subject name and subject code
-
-
-
- Class\-: \hyperlink{classClassDetails}{Class\-Details} Method\-: \hyperlink{classClassDetails}{Class\-Details} \-:\-: \hyperlink{classClassDetails_a7eed324cd736c68fe4b420de481e3b17}{Class\-Info()} Description\-: Get class name, subject code and subject name from \subsubsection*{user.}
-
-Definition at line 148 of file classdetails.\-cc.
-
-\hypertarget{classHTMLTags_a4e9e18580cc7f2b82c82e4f81e39be50}{\index{Class\-Details@{Class\-Details}!C\-S\-S@{C\-S\-S}}
-\index{C\-S\-S@{C\-S\-S}!ClassDetails@{Class\-Details}}
+\hypertarget{classHTMLTags_a4e9e18580cc7f2b82c82e4f81e39be50}{\index{Roll\-No\-Details@{Roll\-No\-Details}!C\-S\-S@{C\-S\-S}}
+\index{C\-S\-S@{C\-S\-S}!RollNoDetails@{Roll\-No\-Details}}
 \subsubsection[{C\-S\-S}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-C\-S\-S (
 \begin{DoxyParamCaption}
 \item[{string}]{href}
@@ -275,8 +258,8 @@ Add External C\-S\-S.
 
 Definition at line 138 of file htmltags.\-cc.
 
-\hypertarget{classHTMLTags_aa82b2d3d85b3afd29e5641dbe1ace439}{\index{Class\-Details@{Class\-Details}!Div\-End@{Div\-End}}
-\index{Div\-End@{Div\-End}!ClassDetails@{Class\-Details}}
+\hypertarget{classHTMLTags_aa82b2d3d85b3afd29e5641dbe1ace439}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Div\-End@{Div\-End}}
+\index{Div\-End@{Div\-End}!RollNoDetails@{Roll\-No\-Details}}
 \subsubsection[{Div\-End}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Div\-End (
 \begin{DoxyParamCaption}
 {}
@@ -292,8 +275,8 @@ End div section.
 
 Definition at line 208 of file htmltags.\-cc.
 
-\hypertarget{classHTMLTags_a897512b202cfd12729e8fa24e67ea4d6}{\index{Class\-Details@{Class\-Details}!Div\-Start@{Div\-Start}}
-\index{Div\-Start@{Div\-Start}!ClassDetails@{Class\-Details}}
+\hypertarget{classHTMLTags_a897512b202cfd12729e8fa24e67ea4d6}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Div\-Start@{Div\-Start}}
+\index{Div\-Start@{Div\-Start}!RollNoDetails@{Roll\-No\-Details}}
 \subsubsection[{Div\-Start}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Div\-Start (
 \begin{DoxyParamCaption}
 \item[{string}]{id, }
@@ -310,29 +293,27 @@ Start Div Section.
 
 Definition at line 194 of file htmltags.\-cc.
 
-\hypertarget{classClassDetails_a8e80a53e9b6597171c6d8b1976dc33f9}{\index{Class\-Details@{Class\-Details}!Footer@{Footer}}
-\index{Footer@{Footer}!ClassDetails@{Class\-Details}}
-\subsubsection[{Footer}]{\setlength{\rightskip}{0pt plus 5cm}void Class\-Details\-::\-Footer (
+\hypertarget{classPageLayout_a68aa868a8868b12964f161838b5f814c}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Footer@{Footer}}
+\index{Footer@{Footer}!RollNoDetails@{Roll\-No\-Details}}
+\subsubsection[{Footer}]{\setlength{\rightskip}{0pt plus 5cm}void Page\-Layout\-::\-Footer (
 \begin{DoxyParamCaption}
 {}
 \end{DoxyParamCaption}
-)}}\label{classClassDetails_a8e80a53e9b6597171c6d8b1976dc33f9}
-
-
-Footer of page. 
-
-
-
- Class\-: \hyperlink{classClassDetails}{Class\-Details} Method\-: \hyperlink{classClassDetails}{Class\-Details} \-:\-: \hyperlink{classClassDetails_a8e80a53e9b6597171c6d8b1976dc33f9}{Footer()} \subsubsection*{Description\-: Footer of page}
-
-Reimplemented from \hyperlink{classPageLayout_a68aa868a8868b12964f161838b5f814c}{Page\-Layout}.
+)\hspace{0.3cm}{\ttfamily [inherited]}}}\label{classPageLayout_a68aa868a8868b12964f161838b5f814c}
+Footer Section of Page
 
 
 
-Definition at line 89 of file classdetails.\-cc.
+ Class\-: \hyperlink{classPageLayout}{Page\-Layout} Method\-: \hyperlink{classPageLayout}{Page\-Layout} \-:\-: \hyperlink{classPageLayout_a68aa868a8868b12964f161838b5f814c}{Footer()} \subsubsection*{Description\-: Footer of pages}
 
-\hypertarget{classHTMLTags_ab57baef28db9590ce59d0e2f403a210f}{\index{Class\-Details@{Class\-Details}!Form\-End@{Form\-End}}
-\index{Form\-End@{Form\-End}!ClassDetails@{Class\-Details}}
+Reimplemented in \hyperlink{classClassDetails_a8e80a53e9b6597171c6d8b1976dc33f9}{Class\-Details}.
+
+
+
+Definition at line 145 of file pagelayout.\-cc.
+
+\hypertarget{classHTMLTags_ab57baef28db9590ce59d0e2f403a210f}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Form\-End@{Form\-End}}
+\index{Form\-End@{Form\-End}!RollNoDetails@{Roll\-No\-Details}}
 \subsubsection[{Form\-End}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Form\-End (
 \begin{DoxyParamCaption}
 {}
@@ -348,8 +329,8 @@ End Form.
 
 Definition at line 236 of file htmltags.\-cc.
 
-\hypertarget{classHTMLTags_a1489ccf4629069eca5e550eeb8e8e887}{\index{Class\-Details@{Class\-Details}!Form\-Start@{Form\-Start}}
-\index{Form\-Start@{Form\-Start}!ClassDetails@{Class\-Details}}
+\hypertarget{classHTMLTags_a1489ccf4629069eca5e550eeb8e8e887}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Form\-Start@{Form\-Start}}
+\index{Form\-Start@{Form\-Start}!RollNoDetails@{Roll\-No\-Details}}
 \subsubsection[{Form\-Start}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Form\-Start (
 \begin{DoxyParamCaption}
 \item[{string}]{name, }
@@ -367,8 +348,8 @@ Start Form.
 
 Definition at line 222 of file htmltags.\-cc.
 
-\hypertarget{classPageLayout_ae50907d56f0ba7a85f7ccfdeafa45bcc}{\index{Class\-Details@{Class\-Details}!Head@{Head}}
-\index{Head@{Head}!ClassDetails@{Class\-Details}}
+\hypertarget{classPageLayout_ae50907d56f0ba7a85f7ccfdeafa45bcc}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Head@{Head}}
+\index{Head@{Head}!RollNoDetails@{Roll\-No\-Details}}
 \subsubsection[{Head}]{\setlength{\rightskip}{0pt plus 5cm}void Page\-Layout\-::\-Head (
 \begin{DoxyParamCaption}
 \item[{string}]{title\-Name}
@@ -384,8 +365,8 @@ Head Section of Page.
 
 Definition at line 105 of file pagelayout.\-cc.
 
-\hypertarget{classHTMLTags_afdc779e46fac16cc79e4f0e87f621254}{\index{Class\-Details@{Class\-Details}!Head\-End@{Head\-End}}
-\index{Head\-End@{Head\-End}!ClassDetails@{Class\-Details}}
+\hypertarget{classHTMLTags_afdc779e46fac16cc79e4f0e87f621254}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Head\-End@{Head\-End}}
+\index{Head\-End@{Head\-End}!RollNoDetails@{Roll\-No\-Details}}
 \subsubsection[{Head\-End}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Head\-End (
 \begin{DoxyParamCaption}
 {}
@@ -401,29 +382,27 @@ Display $<$/\-H\-E\-A\-D$>$
 
 Definition at line 112 of file htmltags.\-cc.
 
-\hypertarget{classClassDetails_a4a0b14f8c5ca7f845d64854a0d81e1ec}{\index{Class\-Details@{Class\-Details}!Header@{Header}}
-\index{Header@{Header}!ClassDetails@{Class\-Details}}
-\subsubsection[{Header}]{\setlength{\rightskip}{0pt plus 5cm}void Class\-Details\-::\-Header (
+\hypertarget{classPageLayout_a7726061f0653245f644a05807fa92472}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Header@{Header}}
+\index{Header@{Header}!RollNoDetails@{Roll\-No\-Details}}
+\subsubsection[{Header}]{\setlength{\rightskip}{0pt plus 5cm}void Page\-Layout\-::\-Header (
 \begin{DoxyParamCaption}
 {}
 \end{DoxyParamCaption}
-)}}\label{classClassDetails_a4a0b14f8c5ca7f845d64854a0d81e1ec}
-
-
-Header of page. 
-
-
-
- Class\-: \hyperlink{classClassDetails}{Class\-Details} Method\-: \hyperlink{classClassDetails}{Class\-Details} \-:\-: \hyperlink{classClassDetails_a4a0b14f8c5ca7f845d64854a0d81e1ec}{Header()} \subsubsection*{Description\-: Includes menu, logo, header of page}
-
-Reimplemented from \hyperlink{classPageLayout_a7726061f0653245f644a05807fa92472}{Page\-Layout}.
+)\hspace{0.3cm}{\ttfamily [inherited]}}}\label{classPageLayout_a7726061f0653245f644a05807fa92472}
+Header Section of Page
 
 
 
-Definition at line 72 of file classdetails.\-cc.
+ Class\-: \hyperlink{classPageLayout}{Page\-Layout} Method\-: \hyperlink{classPageLayout}{Page\-Layout} \-:\-: \hyperlink{classPageLayout_a7726061f0653245f644a05807fa92472}{Header()} \subsubsection*{Description\-: Call Menu Function}
 
-\hypertarget{classHTMLTags_af2b01cc08884af52e0b291d07035062e}{\index{Class\-Details@{Class\-Details}!Head\-Start@{Head\-Start}}
-\index{Head\-Start@{Head\-Start}!ClassDetails@{Class\-Details}}
+Reimplemented in \hyperlink{classClassDetails_a4a0b14f8c5ca7f845d64854a0d81e1ec}{Class\-Details}.
+
+
+
+Definition at line 88 of file pagelayout.\-cc.
+
+\hypertarget{classHTMLTags_af2b01cc08884af52e0b291d07035062e}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Head\-Start@{Head\-Start}}
+\index{Head\-Start@{Head\-Start}!RollNoDetails@{Roll\-No\-Details}}
 \subsubsection[{Head\-Start}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Head\-Start (
 \begin{DoxyParamCaption}
 {}
@@ -435,8 +414,8 @@ Definition at line 72 of file classdetails.\-cc.
 
 Definition at line 99 of file htmltags.\-cc.
 
-\hypertarget{classHTMLTags_a6553c3d01ee194a1d157e6341333dee3}{\index{Class\-Details@{Class\-Details}!H\-T\-M\-L\-End@{H\-T\-M\-L\-End}}
-\index{H\-T\-M\-L\-End@{H\-T\-M\-L\-End}!ClassDetails@{Class\-Details}}
+\hypertarget{classHTMLTags_a6553c3d01ee194a1d157e6341333dee3}{\index{Roll\-No\-Details@{Roll\-No\-Details}!H\-T\-M\-L\-End@{H\-T\-M\-L\-End}}
+\index{H\-T\-M\-L\-End@{H\-T\-M\-L\-End}!RollNoDetails@{Roll\-No\-Details}}
 \subsubsection[{H\-T\-M\-L\-End}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-H\-T\-M\-L\-End (
 \begin{DoxyParamCaption}
 {}
@@ -452,8 +431,8 @@ Display $<$/\-H\-T\-M\-L$>$
 
 Definition at line 86 of file htmltags.\-cc.
 
-\hypertarget{classHTMLTags_a567551cd701d2836d4240b2917b5e13f}{\index{Class\-Details@{Class\-Details}!H\-T\-M\-L\-Start@{H\-T\-M\-L\-Start}}
-\index{H\-T\-M\-L\-Start@{H\-T\-M\-L\-Start}!ClassDetails@{Class\-Details}}
+\hypertarget{classHTMLTags_a567551cd701d2836d4240b2917b5e13f}{\index{Roll\-No\-Details@{Roll\-No\-Details}!H\-T\-M\-L\-Start@{H\-T\-M\-L\-Start}}
+\index{H\-T\-M\-L\-Start@{H\-T\-M\-L\-Start}!RollNoDetails@{Roll\-No\-Details}}
 \subsubsection[{H\-T\-M\-L\-Start}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-H\-T\-M\-L\-Start (
 \begin{DoxyParamCaption}
 {}
@@ -469,8 +448,8 @@ Display $<$\-H\-T\-M\-L$>$
 
 Definition at line 73 of file htmltags.\-cc.
 
-\hypertarget{classHTMLTags_a705aef36f0847c2a5f10a5df8e079ce8}{\index{Class\-Details@{Class\-Details}!Input\-Field@{Input\-Field}}
-\index{Input\-Field@{Input\-Field}!ClassDetails@{Class\-Details}}
+\hypertarget{classHTMLTags_a705aef36f0847c2a5f10a5df8e079ce8}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Input\-Field@{Input\-Field}}
+\index{Input\-Field@{Input\-Field}!RollNoDetails@{Roll\-No\-Details}}
 \subsubsection[{Input\-Field}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Input\-Field (
 \begin{DoxyParamCaption}
 \item[{string}]{type, }
@@ -489,8 +468,8 @@ Input Field.
 
 Definition at line 278 of file htmltags.\-cc.
 
-\hypertarget{classHTMLTags_aea041d720f12a210615c95350774e6aa}{\index{Class\-Details@{Class\-Details}!Javascript@{Javascript}}
-\index{Javascript@{Javascript}!ClassDetails@{Class\-Details}}
+\hypertarget{classHTMLTags_aea041d720f12a210615c95350774e6aa}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Javascript@{Javascript}}
+\index{Javascript@{Javascript}!RollNoDetails@{Roll\-No\-Details}}
 \subsubsection[{Javascript}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Javascript (
 \begin{DoxyParamCaption}
 \item[{string}]{src}
@@ -506,8 +485,8 @@ Add Javascript File.
 
 Definition at line 153 of file htmltags.\-cc.
 
-\hypertarget{classPageLayout_ae60235c6af48e3ebbc6343d02456da0c}{\index{Class\-Details@{Class\-Details}!Logo@{Logo}}
-\index{Logo@{Logo}!ClassDetails@{Class\-Details}}
+\hypertarget{classPageLayout_ae60235c6af48e3ebbc6343d02456da0c}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Logo@{Logo}}
+\index{Logo@{Logo}!RollNoDetails@{Roll\-No\-Details}}
 \subsubsection[{Logo}]{\setlength{\rightskip}{0pt plus 5cm}void Page\-Layout\-::\-Logo (
 \begin{DoxyParamCaption}
 \item[{string}]{logo\-Name}
@@ -521,8 +500,8 @@ Logo on Page
 
 Definition at line 73 of file pagelayout.\-cc.
 
-\hypertarget{classPageLayout_a49af1dca286bbee9432192a7b3c00332}{\index{Class\-Details@{Class\-Details}!Menu@{Menu}}
-\index{Menu@{Menu}!ClassDetails@{Class\-Details}}
+\hypertarget{classPageLayout_a49af1dca286bbee9432192a7b3c00332}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Menu@{Menu}}
+\index{Menu@{Menu}!RollNoDetails@{Roll\-No\-Details}}
 \subsubsection[{Menu}]{\setlength{\rightskip}{0pt plus 5cm}void Page\-Layout\-::\-Menu (
 \begin{DoxyParamCaption}
 {}
@@ -536,8 +515,25 @@ List/\-Menu Navigation()
 
 Definition at line 50 of file pagelayout.\-cc.
 
-\hypertarget{classHTMLTags_adde967a90e03f4b5168b9bffd319980b}{\index{Class\-Details@{Class\-Details}!Select\-Field\-End@{Select\-Field\-End}}
-\index{Select\-Field\-End@{Select\-Field\-End}!ClassDetails@{Class\-Details}}
+\hypertarget{classRollNoDetails_a218c683c86ee19788b868a08af6e210f}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Read\-Class\-Details@{Read\-Class\-Details}}
+\index{Read\-Class\-Details@{Read\-Class\-Details}!RollNoDetails@{Roll\-No\-Details}}
+\subsubsection[{Read\-Class\-Details}]{\setlength{\rightskip}{0pt plus 5cm}void Roll\-No\-Details\-::\-Read\-Class\-Details (
+\begin{DoxyParamCaption}
+{}
+\end{DoxyParamCaption}
+)}}\label{classRollNoDetails_a218c683c86ee19788b868a08af6e210f}
+
+
+Reading class details from previous page using cgicc. 
+
+
+
+ Class\-: \hyperlink{classRollNoDetails}{Roll\-No\-Details} Method\-: \hyperlink{classRollNoDetails}{Roll\-No\-Details} \-:\-: \hyperlink{classRollNoDetails_a218c683c86ee19788b868a08af6e210f}{Read\-Class\-Details()} \subsubsection*{Description\-: For reading class details from previous page}
+
+Definition at line 50 of file rollnodetails.\-cc.
+
+\hypertarget{classHTMLTags_adde967a90e03f4b5168b9bffd319980b}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Select\-Field\-End@{Select\-Field\-End}}
+\index{Select\-Field\-End@{Select\-Field\-End}!RollNoDetails@{Roll\-No\-Details}}
 \subsubsection[{Select\-Field\-End}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Select\-Field\-End (
 \begin{DoxyParamCaption}
 {}
@@ -553,8 +549,8 @@ End Select Field.
 
 Definition at line 309 of file htmltags.\-cc.
 
-\hypertarget{classHTMLTags_adb6e7ef0a1320dbf6d4acbe1ea3e418f}{\index{Class\-Details@{Class\-Details}!Select\-Field\-Start@{Select\-Field\-Start}}
-\index{Select\-Field\-Start@{Select\-Field\-Start}!ClassDetails@{Class\-Details}}
+\hypertarget{classHTMLTags_adb6e7ef0a1320dbf6d4acbe1ea3e418f}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Select\-Field\-Start@{Select\-Field\-Start}}
+\index{Select\-Field\-Start@{Select\-Field\-Start}!RollNoDetails@{Roll\-No\-Details}}
 \subsubsection[{Select\-Field\-Start}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Select\-Field\-Start (
 \begin{DoxyParamCaption}
 \item[{string}]{name}
@@ -570,8 +566,8 @@ Select Field Start.
 
 Definition at line 296 of file htmltags.\-cc.
 
-\hypertarget{classHTMLTags_ae312980d20e3dea0469fdcb730fb975e}{\index{Class\-Details@{Class\-Details}!Select\-Option\-End@{Select\-Option\-End}}
-\index{Select\-Option\-End@{Select\-Option\-End}!ClassDetails@{Class\-Details}}
+\hypertarget{classHTMLTags_ae312980d20e3dea0469fdcb730fb975e}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Select\-Option\-End@{Select\-Option\-End}}
+\index{Select\-Option\-End@{Select\-Option\-End}!RollNoDetails@{Roll\-No\-Details}}
 \subsubsection[{Select\-Option\-End}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Select\-Option\-End (
 \begin{DoxyParamCaption}
 {}
@@ -587,8 +583,8 @@ Selct Option End.
 
 Definition at line 339 of file htmltags.\-cc.
 
-\hypertarget{classHTMLTags_a372570979ccc675e0ed752fe272e3cd6}{\index{Class\-Details@{Class\-Details}!Select\-Option\-Start@{Select\-Option\-Start}}
-\index{Select\-Option\-Start@{Select\-Option\-Start}!ClassDetails@{Class\-Details}}
+\hypertarget{classHTMLTags_a372570979ccc675e0ed752fe272e3cd6}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Select\-Option\-Start@{Select\-Option\-Start}}
+\index{Select\-Option\-Start@{Select\-Option\-Start}!RollNoDetails@{Roll\-No\-Details}}
 \subsubsection[{Select\-Option\-Start}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Select\-Option\-Start (
 \begin{DoxyParamCaption}
 \item[{string}]{value, }
@@ -605,8 +601,8 @@ Select Option Start.
 
 Definition at line 323 of file htmltags.\-cc.
 
-\hypertarget{classHTMLTags_abe32ec84b6b2940afbc993be2db178e9}{\index{Class\-Details@{Class\-Details}!Set\-H\-T\-M\-L\-Variables@{Set\-H\-T\-M\-L\-Variables}}
-\index{Set\-H\-T\-M\-L\-Variables@{Set\-H\-T\-M\-L\-Variables}!ClassDetails@{Class\-Details}}
+\hypertarget{classHTMLTags_abe32ec84b6b2940afbc993be2db178e9}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Set\-H\-T\-M\-L\-Variables@{Set\-H\-T\-M\-L\-Variables}}
+\index{Set\-H\-T\-M\-L\-Variables@{Set\-H\-T\-M\-L\-Variables}!RollNoDetails@{Roll\-No\-Details}}
 \subsubsection[{Set\-H\-T\-M\-L\-Variables}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Set\-H\-T\-M\-L\-Variables (
 \begin{DoxyParamCaption}
 {}
@@ -622,8 +618,8 @@ Assingn Values to variables.
 
 Definition at line 48 of file htmltags.\-cc.
 
-\hypertarget{classHTMLTags_a0655d9f70a8c1a61c406280d8fb9df7a}{\index{Class\-Details@{Class\-Details}!Table\-End@{Table\-End}}
-\index{Table\-End@{Table\-End}!ClassDetails@{Class\-Details}}
+\hypertarget{classHTMLTags_a0655d9f70a8c1a61c406280d8fb9df7a}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Table\-End@{Table\-End}}
+\index{Table\-End@{Table\-End}!RollNoDetails@{Roll\-No\-Details}}
 \subsubsection[{Table\-End}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Table\-End (
 \begin{DoxyParamCaption}
 {}
@@ -639,8 +635,8 @@ End Table.
 
 Definition at line 263 of file htmltags.\-cc.
 
-\hypertarget{classHTMLTags_a9d4bc37c7d615bc1d7f7c738dae48ad3}{\index{Class\-Details@{Class\-Details}!Table\-Start@{Table\-Start}}
-\index{Table\-Start@{Table\-Start}!ClassDetails@{Class\-Details}}
+\hypertarget{classHTMLTags_a9d4bc37c7d615bc1d7f7c738dae48ad3}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Table\-Start@{Table\-Start}}
+\index{Table\-Start@{Table\-Start}!RollNoDetails@{Roll\-No\-Details}}
 \subsubsection[{Table\-Start}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Table\-Start (
 \begin{DoxyParamCaption}
 \item[{string}]{id, }
@@ -657,8 +653,8 @@ Start Table.
 
 Definition at line 249 of file htmltags.\-cc.
 
-\hypertarget{classHTMLTags_a5128d6f1c6be5ac1689047fc9d0d159f}{\index{Class\-Details@{Class\-Details}!Title@{Title}}
-\index{Title@{Title}!ClassDetails@{Class\-Details}}
+\hypertarget{classHTMLTags_a5128d6f1c6be5ac1689047fc9d0d159f}{\index{Roll\-No\-Details@{Roll\-No\-Details}!Title@{Title}}
+\index{Title@{Title}!RollNoDetails@{Roll\-No\-Details}}
 \subsubsection[{Title}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Title (
 \begin{DoxyParamCaption}
 \item[{string}]{page\-Title}
@@ -674,51 +670,29 @@ Display $<$\-T\-I\-T\-L\-E$>$ $<$/\-T\-I\-T\-L\-E$>$
 
 Definition at line 125 of file htmltags.\-cc.
 
-\hypertarget{classClassDetails_a2a63d68979d3ac96d35e6534414799ef}{\index{Class\-Details@{Class\-Details}!Total\-Classes@{Total\-Classes}}
-\index{Total\-Classes@{Total\-Classes}!ClassDetails@{Class\-Details}}
-\subsubsection[{Total\-Classes}]{\setlength{\rightskip}{0pt plus 5cm}void Class\-Details\-::\-Total\-Classes (
-\begin{DoxyParamCaption}
-{}
-\end{DoxyParamCaption}
-)}}\label{classClassDetails_a2a63d68979d3ac96d35e6534414799ef}
-
-
-Get total classes. 
-
-
-
- Class\-: \hyperlink{classClassDetails}{Class\-Details} Method\-: \hyperlink{classClassDetails}{Class\-Details} \-:\-: \hyperlink{classClassDetails_a2a63d68979d3ac96d35e6534414799ef}{Total\-Classes()} \subsubsection*{Description\-: Get Total classes from user}
-
-Definition at line 103 of file classdetails.\-cc.
-
 
 
 \subsection{Member Data Documentation}
-\hypertarget{classClassDetails_a493e8ed1abcf67813875cff05c2a4543}{\index{Class\-Details@{Class\-Details}!class\-Name@{class\-Name}}
-\index{class\-Name@{class\-Name}!ClassDetails@{Class\-Details}}
-\subsubsection[{class\-Name}]{\setlength{\rightskip}{0pt plus 5cm}string Class\-Details\-::class\-Name\mbox{[}max\-Classes\mbox{]}\hspace{0.3cm}{\ttfamily [protected]}}}\label{classClassDetails_a493e8ed1abcf67813875cff05c2a4543}
-{\bfseries Initial value\-:}
-\begin{DoxyCode}
- \{\textcolor{stringliteral}{"Info. Tech."}, \textcolor{stringliteral}{"10th"}, 
-                                        \textcolor{stringliteral}{"ECE"}, \textcolor{stringliteral}{"Mech. Engg."}, 
-                                        \textcolor{stringliteral}{"Production Engg."}, 
-                                        \textcolor{stringliteral}{"Electrical Engg."}, \textcolor{stringliteral}{"IT"},             
-                                        \textcolor{stringliteral}{"Electronics Engg."}, 
-                                        \textcolor{stringliteral}{"Comp. Sci. Engg."}, \textcolor{stringliteral}{"MBA"}\}
-\end{DoxyCode}
+\hypertarget{classRollNoDetails_a2126e353865b8e215513fe17785ef230}{\index{Roll\-No\-Details@{Roll\-No\-Details}!prefix@{prefix}}
+\index{prefix@{prefix}!RollNoDetails@{Roll\-No\-Details}}
+\subsubsection[{prefix}]{\setlength{\rightskip}{0pt plus 5cm}string Roll\-No\-Details\-::prefix\mbox{[}M\-I\-N\-\_\-\-S\-I\-Z\-E\mbox{]}\hspace{0.3cm}{\ttfamily [protected]}}}\label{classRollNoDetails_a2126e353865b8e215513fe17785ef230}
 
 
-Definition at line 54 of file classdetails.\-h.
+for storing values of class details 
 
-\hypertarget{classPageLayout_a8a3c1ddc422df2556fbc95d0cd575a05}{\index{Class\-Details@{Class\-Details}!project\-Name@{project\-Name}}
-\index{project\-Name@{project\-Name}!ClassDetails@{Class\-Details}}
+
+
+Definition at line 39 of file rollnodetails.\-h.
+
+\hypertarget{classPageLayout_a8a3c1ddc422df2556fbc95d0cd575a05}{\index{Roll\-No\-Details@{Roll\-No\-Details}!project\-Name@{project\-Name}}
+\index{project\-Name@{project\-Name}!RollNoDetails@{Roll\-No\-Details}}
 \subsubsection[{project\-Name}]{\setlength{\rightskip}{0pt plus 5cm}string Page\-Layout\-::project\-Name\hspace{0.3cm}{\ttfamily [protected]}, {\ttfamily [inherited]}}}\label{classPageLayout_a8a3c1ddc422df2556fbc95d0cd575a05}
 Project Name = Ba\-Ka\-Plan 
 
 Definition at line 37 of file pagelayout.\-h.
 
-\hypertarget{classHTMLTags_ae987289d0dab2e3e234048615f930d0f}{\index{Class\-Details@{Class\-Details}!start\-H1@{start\-H1}}
-\index{start\-H1@{start\-H1}!ClassDetails@{Class\-Details}}
+\hypertarget{classHTMLTags_ae987289d0dab2e3e234048615f930d0f}{\index{Roll\-No\-Details@{Roll\-No\-Details}!start\-H1@{start\-H1}}
+\index{start\-H1@{start\-H1}!RollNoDetails@{Roll\-No\-Details}}
 \subsubsection[{start\-H1}]{\setlength{\rightskip}{0pt plus 5cm}string H\-T\-M\-L\-Tags\-::start\-H1\hspace{0.3cm}{\ttfamily [protected]}, {\ttfamily [inherited]}}}\label{classHTMLTags_ae987289d0dab2e3e234048615f930d0f}
 
 
@@ -732,52 +706,9 @@ H\-T\-M\-L Tag Variables for
 
 Definition at line 38 of file htmltags.\-h.
 
-\hypertarget{classClassDetails_aabb81b0797930602510f4531c875c6d1}{\index{Class\-Details@{Class\-Details}!subject\-Code@{subject\-Code}}
-\index{subject\-Code@{subject\-Code}!ClassDetails@{Class\-Details}}
-\subsubsection[{subject\-Code}]{\setlength{\rightskip}{0pt plus 5cm}string Class\-Details\-::subject\-Code\mbox{[}max\-Classes\mbox{]}\hspace{0.3cm}{\ttfamily [protected]}}}\label{classClassDetails_aabb81b0797930602510f4531c875c6d1}
-{\bfseries Initial value\-:}
-\begin{DoxyCode}
- \{\textcolor{stringliteral}{"IT-101, IT-102"}, 
-                                          \textcolor{stringliteral}{"ME-10,CE-252"}, \textcolor{stringliteral}{"EVS, ED-10"}, 
-                                          \textcolor{stringliteral}{"ED-10, IT-102"}, \textcolor{stringliteral}{"IT-102"}, 
-                                          \textcolor{stringliteral}{"IT-203"}, \textcolor{stringliteral}{"CE-120"}, \textcolor{stringliteral}{"ME-140"}, 
-                                          \textcolor{stringliteral}{"EE-109, 1234S, IT-203"},    
-                                          \textcolor{stringliteral}{"ME-101,ME-501,IT-101"} \}
-\end{DoxyCode}
-
-
-Definition at line 67 of file classdetails.\-h.
-
-\hypertarget{classClassDetails_a24cb6f1543b6a13e6308594903f0d7ab}{\index{Class\-Details@{Class\-Details}!subject\-Name@{subject\-Name}}
-\index{subject\-Name@{subject\-Name}!ClassDetails@{Class\-Details}}
-\subsubsection[{subject\-Name}]{\setlength{\rightskip}{0pt plus 5cm}string Class\-Details\-::subject\-Name\mbox{[}max\-Classes\mbox{]}\hspace{0.3cm}{\ttfamily [protected]}}}\label{classClassDetails_a24cb6f1543b6a13e6308594903f0d7ab}
-{\bfseries Initial value\-:}
-\begin{DoxyCode}
- \{\textcolor{stringliteral}{"DBMS, SAD"}, \textcolor{stringliteral}{"Maths,Physics"},
-                                          \textcolor{stringliteral}{"OS, EVS"}, \textcolor{stringliteral}{"Java, C++"}, \textcolor{stringliteral}{"EVS"},
-                                          \textcolor{stringliteral}{"Chem."}, \textcolor{stringliteral}{"ED"}, \textcolor{stringliteral}{"Maths"},       
-                                          \textcolor{stringliteral}{"Maths,DBMS, Physics"},
-                                          \textcolor{stringliteral}{"Multimedia, Dot Net, ED"}\}
-\end{DoxyCode}
-
-
-Definition at line 61 of file classdetails.\-h.
-
-\hypertarget{classClassDetails_a0f5d73651bbf0ea0919cb6a2993c2afc}{\index{Class\-Details@{Class\-Details}!table\-Heading@{table\-Heading}}
-\index{table\-Heading@{table\-Heading}!ClassDetails@{Class\-Details}}
-\subsubsection[{table\-Heading}]{\setlength{\rightskip}{0pt plus 5cm}string Class\-Details\-::table\-Heading\mbox{[}4\mbox{]}\hspace{0.3cm}{\ttfamily [protected]}}}\label{classClassDetails_a0f5d73651bbf0ea0919cb6a2993c2afc}
-{\bfseries Initial value\-:}
-\begin{DoxyCode}
- \{\textcolor{stringliteral}{"Class Name"}, \textcolor{stringliteral}{"Total Subjects"}, 
-                                  \textcolor{stringliteral}{"Subject Name"}, \textcolor{stringliteral}{"Subject Code"}\}
-\end{DoxyCode}
-
-
-Definition at line 74 of file classdetails.\-h.
-
 
 
 The documentation for this class was generated from the following files\-:\begin{DoxyCompactItemize}
 \item 
-src/classdetails.\-h\item 
-src/classdetails.\-cc\end{DoxyCompactItemize}
+src/rollnodetails.\-h\item 
+src/rollnodetails.\-cc\end{DoxyCompactItemize}
