--- a/Documentation/latex/dir_68267d1309a1af8e8297ef4c3efbcdba.tex
+++ b/Documentation/latex/dir_68267d1309a1af8e8297ef4c3efbcdba.tex
@@ -10,6 +10,10 @@ file {\bfseries classdetails.\-cc}
 \item 
 file {\bfseries classdetails.\-h}
 \item 
+file {\bfseries classinfo-\/main.\-cpp}
+\item 
+file {\bfseries constants.\-h}
+\item 
 file {\bfseries filenames.\-h}
 \item 
 file {\bfseries header.\-h}
